[ADD] Refactor code_generator and format all code [FIX] remove model inter-dependency magic number [ADD] code_generator: support more mysql type [ADD] code_generator_db_servers columns views when load db - show exception when failure load db [UPD] code_generator_db_servers: format code [ADD] code_generator_db_servers: support primary_key in fields [FIX] icon with white background [FIX] database typo and move configuration at the end of menu [ADD] code_generator_db_servers with more model type [ADD] code_generator_db_servers requirements.txt [ADD] code_generator_db_servers add tree views, menu, access and action [FIX] add view generation record, menu and tree views - Order record menu by id creation order, the root need to be first - Change how create menues [FIX] remove wrong help in actions [FIX] code_generator unlink o2m_models [FIX] code_generator move generate views in model_builder [ADD] code_generator_model_builder: wizard clear views and select model [ADD] wip code_generator_generate_portal_wizard [FIX] typo menues to menus [FIX] typo BLANCK to BLANK [FIX] code_generator: comment lines cause crash when using pydev - this line is used to validate field rec_name when it do not exist - comment this will cause bug of wrong use rec_name later in execution [FIX] code_generator: hide option copy=False [ADD] code_generator_model_builder: fix clear menus [FIX] support icon when download module - hide action set icon because not working - hack force icon until the last will be fix [FIX] code_generator: remove jinja parse because conflict with odoo ways - cannot execute function doesn't exist when create the module, it tries to transform python code [FIX] rename typo serverconstrains to server_constrains - clean code [ADD] code_generator: feature to sync with local code with generation code [FIX] french in ir.model.access.csv and remove unused xml version tag Remove header coding utf-8 [FIX] blacklist and whitelist fields for export data

--- a/code_generator_db_servers/i18n/es.po
+++ b/code_generator_db_servers/i18n/es.po
@@ -24,7 +24,7 @@ msgstr ""
 #: model:ir.ui.menu,name:code_generator_db_servers.code_generator_generator_server_menu
 #: model:ir.actions.act_window,name:code_generator_db_servers.code_generator_db_actionwindow
 #: model_terms:ir.ui.view,arch_db:code_generator_db_servers.code_generator_db_table_search
-msgid "Data Bases"
+msgid "Databases"
 msgstr "Bases de Datos"
 
 #. module: code_generator_db_servers
@@ -144,7 +144,7 @@ msgstr "Adicione una nueva Base de Datos"
 
 #. module: code_generator_db_servers
 #: model_terms:ir.actions.act_window,help:code_generator_db_servers.code_generator_db_actionwindow
-msgid "Data Bases whose tables could be imported to Odoo and then be exported into code"
+msgid "Databases whose tables could be imported to Odoo and then be exported into code"
 msgstr "Bases de Datos cuyas tablas podrán ser importadas a Odoo y luego exportadas a código"
 
 #. module: code_generator_db_servers
@@ -189,7 +189,7 @@ msgstr "Tablas"
 
 #. module: code_generator_db_servers
 #: model_terms:ir.actions.act_window,help:code_generator_db_servers.code_generator_db_table_actionwindow
-msgid "Tables belonging to the inserted Data Bases"
+msgid "Tables belonging to the inserted Databases"
 msgstr "Tablas pertenecientes a las Bases de Datos insertadas"
 
 #. module: code_generator_db_servers
